Test Stage 1 finished refactore Serializer add SurveyInfo entity add aggregates for data manipulation update openApi annotation regenerate swagger.json
