# backend/src/Server/Controller/SurveyController.php
@@ -1,11 +1,28 @@
 <?php
 
-namespace IDW\JOBINTERVIEW\Server\Controller;
+namespace IWD\JOBINTERVIEW\Server\Controller;
 
+use IWD\JOBINTERVIEW\Server\DAO\SurveyDao;
+use Symfony\Component\Serializer\Serializer;
+use Symfony\Component\Serializer\Encoder\JsonEncoder;
+use Symfony\Component\Serializer\Normalizer\ObjectNormalizer;
 use OpenApi\Annotations as OA;
+
 
 class SurveyController
 {
+    /**
+     * @var \Serializer
+     */
+    protected $serializer;
+
+    public function __construct()
+    {
+        $encoders = array(new JsonEncoder());
+        $normalizers = array(new ObjectNormalizer());
+        $this->serializer = new Serializer($normalizers, $encoders);
+    }
+
     /**
      * @OA\Get(
      *      path="/surveys",
@@ -20,8 +37,16 @@ class SurveyController
      *      )
      * )
      */
-    public function listSurvey(){
+    public function listSurvey()
+    {
+        $result = [];
+        $data = $this->getDatas();
+        foreach ($data as $key => $surveyInfo) {
+            array_push($result, $surveyInfo->getSurvey());
+        }
         
+        $surveys = array_unique($result, SORT_REGULAR);
+        return $this->serializer->serialize($surveys, 'json');
     }
 
     /**
@@ -37,7 +62,7 @@ class SurveyController
      *      @OA\Response(
      *          response="200",
      *          description="a survey identified by code",
-     *          @OA\JsonContent(ref="#/components/schemas/SurveyDetailed")
+     *          @OA\JsonContent(ref="#/components/schemas/SurveyInfo")
      *      ),
      *      @OA\Response(
      *          response="404",
@@ -45,9 +70,8 @@ class SurveyController
      *      ),
      * )
      */
-    public function getSurvey($code){
-        
-    }
+    public function getSurvey($code)
+    { }
 
     /**
      * @OA\Get(
@@ -62,7 +86,7 @@ class SurveyController
      *      @OA\Response(
      *          response="200",
      *          description="survey with aggregate answers",
-     *          @OA\JsonContent(ref="#/components/schemas/SurveyDetailed")
+     *          @OA\JsonContent(ref="#/components/schemas/SurveyInfo")
      *      ),
      *      @OA\Response(
      *          response="404",
@@ -70,7 +94,17 @@ class SurveyController
      *      )
      * )
      */
-    public function getAggregatedSurvey($code){
+    public function getAggregatedSurvey($code)
+    { }
 
+    /**
+     * @return mixed
+     */
+    protected function getDatas()
+    {
+        $directory = new \FilesystemIterator("./data");
+        $dao = new SurveyDao($directory);
+        $surveys = $dao->findAll();
+        return $surveys;
     }
 }
